force-app/main/default/objects/QtC_Mig_CreditMemoLines_Alloc_Temp_Table__c/QtC_Mig_CreditMemoLines_Alloc_Temp_Table__c.object-meta.xml
<CustomObject>
    <label>QtC Mig CreditMemoLines Alloc Temp Table</label>
    <nameField>
        <label>QtC Mig CreditMemoLines Alloc Temp Table</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QtC Mig CreditMemoLines Alloc Temp Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>