force-app/main/default/objects/QtC_Mig_CreditMemoLines_Alloc_Temp_Table__c/fields/Applied_To_Link__c.field-meta.xml
<CustomField>
    <fullName>Applied_To_Link__c</fullName>
    <label>Applied To Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>